2nd fix for index RWD on small screens

--- a/wwwroot/css/indexstyle.css
+++ b/wwwroot/css/indexstyle.css
@@ -1,5 +1,3 @@
-
-
 body, html, .container{
     background-size: cover;
 
@@ -182,7 +180,7 @@ body{
 
 @media screen and (max-width : 768px) {
     #homecontainer .searchbox {
-        margin: 10% 5%;
-        width: auto;
+        margin: 10% 5% !important;
+        width: auto !important;
     }
 }
